# jets

./: .gitignore  LICENSE  README.md  pyproject.toml
jets/: backend.py  jet.py  typing.py
jets/numpy/: backend.py  functions.py  jet.py
jets/solvers/: gauss_newton.py  lm.py  utils.py
jets/torch/: backend.py  functions.py  jet.py
tests/: conftest.py  derivatives.py  jet_contract.py  test_backends.py  test_numpy_jet.py  test_torch_jet.py
